--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
     "webpack-server": "^0.1.2"
+  },
+  "dependencies": {
+    "@toast-ui/vue-editor": "^1.0.0"
   }
 }
