--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "url-loader": "^1.1.1",
-    "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
@@ -24,5 +23,8 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
     "webpack-server": "^0.1.2"
+  },
+  "dependencies": {
+    "vue": "^2.5.17"
   }
 }
