--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "webpack-server": "^0.1.2"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "@toast-ui/vue-chart": "file:../../work/tui_vue_wrapper/vue-tui-chart/toast-ui-vue-chart-1.0.0.tgz",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1"
   }
 }
