--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-loader": "^7.1.2",
     "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "url-loader": "^1.1.1",
+    "file-loader": "^2.0.0",
     "vue-loader": "^15.4.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
@@ -25,6 +25,8 @@
     "webpack-server": "^0.1.2"
   },
   "dependencies": {
+    "@toast-ui/vue-grid": "file:../../work/tui_vue_wrapper/vue-tui-grid/toast-ui-vue-grid-1.0.0.tgz",
+    "tui-code-snippet": "^1.4.0",
     "vue": "^2.5.17"
   }
 }
