--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "webpack-server": "^0.1.2"
   },
   "dependencies": {
-    "@toast-ui/vue-grid": "file:../../work/tui_vue_wrapper/vue-tui-grid/toast-ui-vue-grid-1.0.0.tgz",
-    "tui-code-snippet": "^1.4.0",
+    "@toast-ui/vue-grid": "^1.0.0",
     "vue": "^2.5.17"
   }
 }
