--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "webpack-server": "^0.1.2"
   },
   "dependencies": {
-    "@toast-ui/vue-chart": "file:../../work/tui_vue_wrapper/vue-tui-chart/toast-ui-vue-chart-1.0.0.tgz",
+    "@toast-ui/vue-chart": "^1.0.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   }
