--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "webpack-server": "^0.1.2"
   },
   "dependencies": {
-    "@toast-ui/vue-calendar": "file:../../work/tui_vue_wrapper/vue-tui-calendar/toast-ui-vue-calendar-1.0.0.tgz",
+    "@toast-ui/vue-calendar": "^1.0.0",
     "vue": "^2.5.17"
   }
 }
